tests/negative/TC-REG-NEG-01.robot
*** Settings ***
Library     SeleniumLibrary
Resource    ../../resources/keywords/common_keywords.robot
Resource    ../../resources/pages/register_page.robot


Suite Setup     Load Environment
Test Setup      Open Application
Test Teardown   Close Application

*** Test Cases ***
TC-REG-NEG-01
    [Documentation]    Test to verify registration mandatory fields left empty
    Login with Wrong Credentials